--- a/templates/show_figure.html.twig
+++ b/templates/show_figure.html.twig
@@ -65,7 +65,7 @@
                                 'rows': '1'
                             }
                         }) }}
-                        <button type="submit" class="col-4 btn btn-primary ">Laisser un commentaire</button>
+                        <button type="submit" class="button col-4 btn">Laisser un commentaire</button>
                         {{ form_end(comment_form)}}
                     </div>
             </div>
