rename somme class type in index template

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -44,7 +44,7 @@
                                 {{ figure.name }}
                             </a>
                         </h5>
-                        <div class="card-icon">
+                        <div class="crud-icons-container">
                             <a href="{{ path('modify_figure', { slug: figure.slug}) }}">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="5.094 7.438 20 20">
                                     <path class="crud-icon" d="M5.119 26.69a.589.589 0 00.148.575.598.598 0 00.576.149l5.471-1.562-4.633-4.635-1.562 5.473zM24.582 10.439l-2.485-2.485a1.757 1.757 0 00-1.248-.517c-.47 0-.912.184-1.244.513L18.36 9.195l4.975 4.975 1.245-1.245c.332-.332.512-.774.512-1.244a1.739 1.739 0 00-.51-1.242zM7.341 20.217l10.192-10.193L22.509 15 12.317 25.192l-4.976-4.975z"/>
