--- a/public/css/style.css
+++ b/public/css/style.css
@@ -287,9 +287,15 @@ a:hover .crud-icon-reverse {
  margin-top: 220px;
 }
 
+.first-image-icons {
+    position:relative;
+    top:50px;
+    right:15px;
+}
+
 .first-image {
     padding: 0px;
-    margin-top:-400px;
+    margin-top:-442px;
 }
 
 .figure-title
@@ -396,3 +402,21 @@ a:hover .crud-icon-reverse {
     height:175px;
 }
 
+.login-section {
+    margin-top: 205px;
+    margin-bottom: 150px;
+}
+
+.login-form {
+    background-color: rgba(255, 255, 255, 0.80);
+    border-width: 2px;
+    border-color: rgba(13, 114, 156, 0.8);
+    border-style: groove;
+   }
+
+.form-control {
+    border-top:none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 2px rgba(13, 114, 156, 0.8) groove;
+}
