--- a/templates/show_figure.html.twig
+++ b/templates/show_figure.html.twig
@@ -86,6 +86,36 @@
                     </div>  
                 </div>
             {% endfor %}
+            <div class="arrows mb-3 d-flex flex-row justify-content-center">
+                <div>
+                    {% if previous >= 0 %}
+                        <a class="m-3" href="{{ path('show_figure', { slug: figure.slug, offset: previous  }) }}">
+                    {% endif %}
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50.5" height="50.5">
+                                <g>
+                                    <path class="{% if previous >= 0 %}frame{% else %}frame-disabled{% endif %}" d="M.25.25h50v50h-50z"/>
+                                    <path class="{% if previous >= 0 %}arrow{% else %}arrow-disabled{% endif %}"  d="M9.173 25.25l32.153-14.891-5.566 6.201-.102.109c-4.777 5.213-4.777 11.947.006 17.166l5.663 6.307L9.173 25.25zm8.15-.001l12.505 5.792c-1.568-3.76-1.568-7.82-.002-11.58l-12.503 5.788z"/>
+                                </g>
+                            </svg>
+                    {% if previous >= 0 %}
+                        </a>
+                    {% endif %}
+                </div>
+                <div>
+                    {% if next < comments|length %}
+                        <a class="m-3" href="{{ path('show_figure', { slug: figure.slug, offset: next  }) }}">
+                    {% endif %}
+                            <svg xmlns="http://www.w3.org/2000/svg" width="50.5" height="50.5">
+                                <g>
+                                    <path class="{% if next < comments|length %}frame{% else %}frame-disabled{% endif %}" d="M.25.25h50v50h-50z"/>
+                                    <path class="{% if next < comments|length %}arrow{% else %}arrow-disabled{% endif %}" d="M41.327 25.25L9.174 40.141l5.566-6.201.102-.109c4.777-5.213 4.777-11.947-.006-17.166l-5.663-6.307L41.327 25.25zm-8.15.001l-12.505-5.792c1.568 3.76 1.568 7.82.002 11.58l12.503-5.788z"/>
+                                </g>
+                            </svg>
+                    {% if next < comments|length %}
+                        </a>
+                    {% endif %}
+                </div>
+            </div>
         </div>
     </section>
 
