--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -41,7 +41,7 @@
             <h3 class=" my-auto pr-5">Tricks</h3>
             <a class="btn button" href="{{ path('figure_form') }}" role="button">Crééer</a>
         </div>
-        <div class="section-tricks col-12 d-flex justify-content-start ">
+        <div class="section-tricks col-12 d-flex flex-column flex-sm-row flex-sm-wrap justify-content-between justify-content-lg-start ">
             {% for figure in figures %}
                 <div class="card col-2">
                     <img src="{% if figure.images.0.name is not defined %}{{ asset('/images/site') }}/replace-main.jpg {% else %}{{ asset('/images/uploads/figures') }}/{{ figure.images.0.name }}{% endif %}" class="card-img-top" alt="{% if figure.images.0.alt is defined %}{{ figure.images.0.alt }}{% else %}Remplacer l'image principale{% endif %}">
