--- a/public/css/style.css
+++ b/public/css/style.css
@@ -493,7 +493,9 @@ a:hover .crud-icon-reverse {
 	}
 }
 
-.comment-datas, .post-media {
+.comment-datas, 
+.post-media,
+.flash-notice {
     border-width: 2px;
     border-color: rgba(13, 114, 156, 0.8);
     border-style: groove;
