--- a/templates/show_figure.html.twig
+++ b/templates/show_figure.html.twig
@@ -46,7 +46,7 @@
         
 
         <div class="media-phone-version my-0 py-0">
-            <button class="btn button media-phone-version" type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#ModalMedia">
+            <button class="btn button media-phone-version mt-4 " type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#ModalMedia">
                 Voir les médias
             </button>
             <div class="modal fade" id="ModalMedia" tabindex="-1" aria-labelledby="ModalMediaLabel" aria-hidden="true">
