--- a/templates/figure_form.html.twig
+++ b/templates/figure_form.html.twig
@@ -6,33 +6,36 @@
 {% block type %} <!--Note if this page is an article or a website--> {% endblock %}
 {% block url %} <!-- Site URL to complete : http://www.example.com/--> {% endblock %}
 
-
-{% form_theme figure_form _self %}
-
-
-         
-
 {% block class %}class="presentation-body"{% endblock %}
 
 {% block body %}
-    <section class="figure-presentation-page col-11 col-sm-10 col-xl-8 mx-auto d-flex flex-column align-items-center">           
+    <section class="figure-form-page col-11 col-sm-10 col-xl-8 mx-auto d-flex flex-column align-items-center">           
         {{ form_start(figure_form, {'attr' : {
             'novalidate': 'novalidate',
             'class': 'col-12 d-flex flex-column'
         }}) }}
-            <div class="figure-title col-8 col-md-6 mx-auto p-3 p-md-4 p-lg-5 text-center"> 
+            <div class="form-figure-title col-8 col-md-6 mx-auto p-3 p-md-4 p-lg-5 text-center"> 
                 <h2>{% if figure.name is not empty %}Le {{ figure.name }} {% else %}Création d'une nouvelle figure{% endif %}</h2>
             </div>
-            <div class="media col-12 mx-auto flex-wrap d-flex flex-row align-items-end justify-content-center mt-4 mb-2">
+            <div class="col-12 mx-auto flex-wrap d-flex flex-row align-items-end justify-content-center mt-4 mb-2">
                 <span class="images col-12 d-flex flex-wrap flex-row justify-content-center" data-prototype="{{ form_widget(figure_form.images.vars.prototype)|e('html_attr') }}">
                     {% if figure.images is empty %}
-                        <div class="first-image">  
-                            <img src="{{ asset('/images/site') }}/replace-main.jpg" class="card-img-top" alt="Remplacer l'image principale">
+                        <div class="col-12 d-flex flex-wrap flex-row justify-content-end mb-2">
+                            <div class="form-none-first-image-icons crud-icons-container-reverse align-self-end d-flex justify-content-center mt-2 p-1">
+                                <a class="crud-element-reverse" data-bs-toggle="modal" data-bs-target="#ModalImage0">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="5.094 7.438 20 20">
+                                        <path class="crud-icon-reverse" d="M5.119 26.69a.589.589 0 00.148.575.598.598 0 00.576.149l5.471-1.562-4.633-4.635-1.562 5.473zM24.582 10.439l-2.485-2.485a1.757 1.757 0 00-1.248-.517c-.47 0-.912.184-1.244.513L18.36 9.195l4.975 4.975 1.245-1.245c.332-.332.512-.774.512-1.244a1.739 1.739 0 00-.51-1.242zM7.341 20.217l10.192-10.193L22.509 15 12.317 25.192l-4.976-4.975z"/>
+                                    </svg>
+                                </a>
+                            </div>
+                            <div class="form-first-image">  
+                                <img src="{{ asset('/images/site') }}/replace-main.jpg" class="card-img-top" alt="Remplacer l'image principale">
+                            </div>
                         </div>
                     {% else %}
                         {% for image in figure_form.images %} 
                             {% if loop.index == 1 %}
-                                <div class="col-12 d-flex flex-wrap flex-row justify-content-end">
+                                <div class="col-12 d-flex flex-wrap flex-row justify-content-end mb-2">
                                     <div class="form-first-image-icons crud-icons-container-reverse align-self-end d-flex justify-content-center mt-2 p-1">
                                         <a class="crud-element-reverse" data-bs-toggle="modal" data-bs-target="#ModalImage{{ loop.index }}">
                                             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="5.094 7.438 20 20">
@@ -48,7 +51,7 @@
                                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <div class="first-image-modal image-form-content mb-3">
+                                                    <div class="form-first-image-modal image-form-content mb-3">
                                                         {{ form_row(image.photo) }}
                                                         <p class="mt-3"> La modification de la photo ne se fera qu'au moment de l'enregistrement du formulaire principal.</p>
                                                     </div>
@@ -59,12 +62,12 @@
                                             </div>
                                         </div>
                                     </div> 
-                                    <div class="first-image col-12">  
+                                    <div class="form-first-image col-12">  
                                         <img src="{{ asset('/images/uploads/figures') }}/{{ figure.images.0.name }}" class="registered-image card-img-top" alt="{{ figure.images.0.alt }}">
                                     </div>
                                 </div>
                             {% else %}
-                                <div class="image-media-element d-flex flex-wrap flex-column justify-content-end align-items-center">
+                                <div class="media image-media-element d-flex flex-wrap flex-column justify-content-end align-items-center my-2">
                                     {% if not image.vars.valid %} 
                                         <img src="{{ asset('/images/site') }}/file-error.jpg" alt="Erreur fichier">
                                     {% else %} 
@@ -107,7 +110,7 @@
                 <span class="videos d-flex flex-wrap flex-row" data-prototype="{{ form_widget(figure_form.videos.vars.prototype)|e('html_attr') }}">
                     {% if figure.videos is defined %}                    
                         {% for video in figure_form.videos %} 
-                            <div class="video-media-element d-flex flex-wrap flex-column align-items-center">
+                            <div class="media video-media-element d-flex flex-wrap flex-column align-items-center my-2">
                                 <iframe width="200" src="{{ video.vars.value.url }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                 <div class="crud-icons-container-reverse align-self-end d-flex justify-content-center mt-2 p-1">
                                     <a class="crud-element-reverse modal-link" data-bs-toggle="modal" data-bs-target="#ModalVideo{{ loop.index }}">
@@ -144,13 +147,17 @@
                     {% endif %}
                 </span>
             </div>    
+            
+            <button class="btn button media-phone-version my-2 col-4 mx-auto" type="button" class="btn btn-secondary" data-bs-toggle="modal" data-bs-target="#ModalMedia">
+                Voir les médias
+            </button>
 
             <div class="new-media-form col-11 col-xl-6 mx-auto d-flex flex-column align-items-start">
                 <div class="d-flex align-self-center justify-content-center col-12 flex-wrap">
-                    <span class="image-media-element-button add d-flex flex-column align-items-center m-2">
+                    <span class="image-media-element-button add d-flex flex-column align-items-center my-1 m-sm-3 m-lg-4">
                         <a type="button" class="add_image_link" data-collection-holder-class="images"><img src="{{ asset('/images/site') }}/add-image.jpg" alt="Ajouter une image"></a> 
                     </span> 
-                    <span class="video-media-element-button add d-flex flex-column align-items-center m-2">
+                    <span class="video-media-element-button add d-flex flex-column align-items-center  my-1 m-sm-3 m-lg-4">
                         <a type="button" class="add_video_link" data-collection-holder-class="videos"><img src="{{ asset('/images/site') }}/add-video.jpg" alt="Ajouter une video"></a> 
                     </span> 
                 </div>
@@ -280,7 +287,7 @@
                 }
 
                 if($(".form-first-image-icons").length){          
-                    var $firstImageHolder = $(".first-image");
+                    var $firstImageHolder = $(".form-first-image");
                     var $firstImageIcons = $(".form-first-image-icons");     
                     addDeleteLink($firstImageIcons, $firstImageHolder.children());
                 //    createFirstImageForm($imagesCollectionHolderClass);
@@ -318,7 +325,7 @@
                 if($(".form-first-image-icons").length){
                     $newFormDiv.append("<p>L'image doit être au format paysage, faire moins de 2Mo et moins de 2000px de large.</p>")
                     // Add the new form at the end of the list
-                    $(".first-image-modal").append($newFormDiv)
+                    $(".form-first-image-modal").append($newFormDiv)
                 }
             }
 
