--- a/templates/show_figure.html.twig
+++ b/templates/show_figure.html.twig
@@ -11,7 +11,7 @@
 
 {% block body %}
     <section class="figure-presentation-page col-11 col-sm-10 col-xl-8 mx-auto d-flex flex-column align-items-center" >
-        <div class="{% if not app.user %}unvisible-icons{% endif %} first-image-icons crud-icons-container-reverse align-self-end d-flex justify-content-center mt-2 p-1">
+        <div class="{% if not app.user %}unvisible-icons{% endif %} show-first-image-icons crud-icons-container-reverse align-self-end d-flex justify-content-center mt-2 p-1">
             <a class="crud-element-reverse"  href="{{ path('figure_form', { slug: figure.slug}) }}">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="5.094 7.438 20 20">
                     <path class="crud-icon-reverse" d="M5.119 26.69a.589.589 0 00.148.575.598.598 0 00.576.149l5.471-1.562-4.633-4.635-1.562 5.473zM24.582 10.439l-2.485-2.485a1.757 1.757 0 00-1.248-.517c-.47 0-.912.184-1.244.513L18.36 9.195l4.975 4.975 1.245-1.245c.332-.332.512-.774.512-1.244a1.739 1.739 0 00-.51-1.242zM7.341 20.217l10.192-10.193L22.509 15 12.317 25.192l-4.976-4.975z"/>
