--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -2,9 +2,9 @@
 
 {% block title %}Accueil{% endblock %}
 {% block description %} Page d'accueil du site communautaire Snowtricks{% endblock %}
-{% block image %}public/image.jpg{% endblock %}
-{% block type %} <!--Note if this page is an article or a website--> {% endblock %}
-{% block url %} <!-- Site URL to complete : http://www.example.com/--> {% endblock %}
+{% block image %}{{ asset('/images/site/main.jpg') }}{% endblock %}
+{% block type %} Website {% endblock %}
+{% block url %} {{ url('homepage') }} {% endblock %}
 
 
 {% block body %}
